# GMP-Launcher

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
resource/: gmpinjector.sh  resource.rc
src/: dialogaddserver.cpp  dialogaddserver.h  dialoginfo.ui  main.cpp  mainwindow.cpp  mainwindow.h
src/injector/: CMakeLists.txt  argsParser.h  main.cpp  pathUtils.h  win32Utils.h  zSpy.h
src/launcher/: CMakeLists.txt  dialogaddserver.cpp  dialogaddserver.h  dialogaddserver.ui  dialoginfo.ui  gmpclient.cpp  gmpclient.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  server.cpp  servermodel.cpp
